--- a/movie_recommender/Dockerfile
+++ b/movie_recommender/Dockerfile
@@ -10,6 +10,8 @@ COPY . /app
 # Install dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
+RUN apt-get update && apt-get install -y sqlite3
+
 # Expose the port the app runs on
 EXPOSE 5000
 
